# qaiops

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  alembic.ini  pyproject.toml
dashboard/: package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/alerts/: page.tsx
dashboard/app/history/: page.tsx
dashboard/app/live/: page.tsx
dashboard/app/projects/: page.tsx
dashboard/components/charts/: CostRanking.tsx  DailyUsageChart.tsx  ToolDistribution.tsx
dashboard/components/common/: LogTable.tsx  StatsCard.tsx
dashboard/components/layout/: Header.tsx  Sidebar.tsx
dashboard/lib/: api.ts
docs/: ARCHITECTURE.md  CHANGELOG.md  QaiOps_PRD.md  ROADMAP.md
docs/phases/: PHASE1_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md
qaiops/: __init__.py
qaiops/db/: engine.py  models.py
qaiops/db/migrations/: env.py
qaiops/db/migrations/versions/: ae605ddb8ad7_initial_schema.py
qaiops/server/: broadcast.py  cost.py  main.py  token_counter.py
qaiops/server/routers/: logs.py  stats.py
qaiops/wrapper/: main.py  metadata.py  sender.py
qaiops/wrapper/parsers/: __init__.py  claude.py  gemini.py  gpt.py
tests/: conftest.py  test_cost.py  test_logs_router.py  test_metadata.py  test_parsers.py  test_sender.py  test_stats_router.py  test_token_counter.py
