[project]
name = "qaiops"
version = "0.1.0"
description = "AI CLI Observability for Developers - 토큰 소모, 비용, 패턴을 실시간으로 시각화하는 로컬 관제 시스템"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
qaiops = "qaiops.wrapper.main:cli"
qops = "qaiops.wrapper.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["qaiops"]
